feat: improve trust system, reporting, and platform workflows